Update release notes

--- a/fastlane/metadata/ca/release_notes.txt
+++ b/fastlane/metadata/ca/release_notes.txt
@@ -1,1 +1,1 @@
-• Millores d'accessibilitat a la funció VoiceOver.
+• This update fixes a bug that prevented link previews from appearing for forwarded messages in some cases.
