--- a/fastlane/metadata/fi/release_notes.txt
+++ b/fastlane/metadata/fi/release_notes.txt
@@ -1,1 +1,1 @@
-• VoiceOver-toiminnon saavutettavuusparannuksia.
+• This update fixes a bug that prevented link previews from appearing for forwarded messages in some cases.
