--- a/fastlane/metadata/he/release_notes.txt
+++ b/fastlane/metadata/he/release_notes.txt
@@ -1,1 +1,1 @@
-• שיפורי נגישות של VoiceOver
+• This update fixes a bug that prevented link previews from appearing for forwarded messages in some cases.
