--- a/fastlane/metadata/hr/release_notes.txt
+++ b/fastlane/metadata/hr/release_notes.txt
@@ -1,1 +1,1 @@
-• Unaprijedili smo pristupačnost VoiceOver-a.
+• This update fixes a bug that prevented link previews from appearing for forwarded messages in some cases.
