--- a/fastlane/metadata/th/release_notes.txt
+++ b/fastlane/metadata/th/release_notes.txt
@@ -1,1 +1,1 @@
-• พัฒนาความสามารถเพื่อรองรับการทำงานของ VoiceOver
+• This update fixes a bug that prevented link previews from appearing for forwarded messages in some cases.
