--- a/fastlane/metadata/cs/release_notes.txt
+++ b/fastlane/metadata/cs/release_notes.txt
@@ -1,1 +1,1 @@
-• Vylepšení přístupnosti pro VoiceOver
+• This update fixes a bug that prevented link previews from appearing for forwarded messages in some cases.
