--- a/fastlane/metadata/es-MX/release_notes.txt
+++ b/fastlane/metadata/es-MX/release_notes.txt
@@ -1,1 +1,1 @@
-• Los indicadores de estado de los mensajes (enviado, entregado, etc.) ahora son compatibles con la función VoiceOver de iOS. Así, logramos mejorar la accesibilidad para las personas ciegas o con baja visión.
+• This update fixes a bug that prevented link previews from appearing for forwarded messages in some cases.
