--- a/fastlane/metadata/hu/release_notes.txt
+++ b/fastlane/metadata/hu/release_notes.txt
@@ -1,1 +1,1 @@
-Hangalámondással kapcsolatos akadálymentesítési fejlesztések.
+• This update fixes a bug that prevented link previews from appearing for forwarded messages in some cases.
