--- a/fastlane/metadata/ja/release_notes.txt
+++ b/fastlane/metadata/ja/release_notes.txt
@@ -1,1 +1,1 @@
-VoiceOver機能がさらに使いやすくなりました。
+• This update fixes a bug that prevented link previews from appearing for forwarded messages in some cases.
