--- a/fastlane/metadata/ms/release_notes.txt
+++ b/fastlane/metadata/ms/release_notes.txt
@@ -1,1 +1,1 @@
-Penambahbaikan kebolehcapaian VoiceOver.
+• This update fixes a bug that prevented link previews from appearing for forwarded messages in some cases.
