--- a/fastlane/metadata/no/release_notes.txt
+++ b/fastlane/metadata/no/release_notes.txt
@@ -1,1 +1,1 @@
-• Tilgjengelighetsforbedringer for VoiceOver.
+• This update fixes a bug that prevented link previews from appearing for forwarded messages in some cases.
