--- a/fastlane/metadata/sk/release_notes.txt
+++ b/fastlane/metadata/sk/release_notes.txt
@@ -1,1 +1,1 @@
-• Zlepšenie dostupnosti funkcie VoiceOver.
+• This update fixes a bug that prevented link previews from appearing for forwarded messages in some cases.
