--- a/fastlane/metadata/tr/release_notes.txt
+++ b/fastlane/metadata/tr/release_notes.txt
@@ -1,1 +1,1 @@
-• VoiceOver erişilebilirlik geliştirmeleri.
+• This update fixes a bug that prevented link previews from appearing for forwarded messages in some cases.
