--- a/fastlane/metadata/vi/release_notes.txt
+++ b/fastlane/metadata/vi/release_notes.txt
@@ -1,1 +1,1 @@
-• Cải thiện khả năng tiếp cận VoiceOver.
+• This update fixes a bug that prevented link previews from appearing for forwarded messages in some cases.
